tests/auto/qml/qqmlapplicationengine/loadFromModuleTranslationsQmlType/i18n/qml_fr.ts
@@ -1,0 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE TS>
+<TS version="2.1" language="fr_FR">
+<context>
+    <name>Main</name>
+    <message>
+        <location filename="../Main.qml" line="5"/>
+        <source>Hello</source>
+        <translation>Salut</translation>
+    </message>
+</context>
+</TS>
